--- a/FreakyFriday/src/FreakyFriday.css
+++ b/FreakyFriday/src/FreakyFriday.css
@@ -36,12 +36,11 @@ body {
     list-style-type: none;
     overflow: hidden;
     position: fixed; /*Så den blir med hele veien*/
-    float: left;
-    display: inline;
 }
     .menuLink {
         text-decoration: none;
         font-size: 23px;
+        float: left;
     }
         .menuLink a {
             color: #84CEEB;
@@ -56,16 +55,18 @@ body {
 
             }
                 .title {
-                /*margin-right: 270px;*/
-                color: #84CEEB;
-                font: bold;
-                font-size: 45px;
-                font-family: Arial;
-                letter-spacing: 3px;
-                padding: 5px;
+                    margin-right: 240px;
+                    color: #84CEEB;
+                    font: bold;
+                    font-size: 45px;
+                    font-family: Arial;
+                    letter-spacing: 3px;
+                    padding: 5px;
+                    float: left;
             }
                 .logo {
-                /*margin-right: 50px;*/
+                margin-right: 50px;
+                    float: left;
             }
 
 /*de forskjellige sidene*/
@@ -116,6 +117,7 @@ text {
                         text-align: center;
                         margin-left: 220px;
                         margin-top: 50px;
+                        align-self: center;
                    }
              /*bilde*/   .bilBilde {
                                 height: 125px;
@@ -125,11 +127,13 @@ text {
                                                 font-size: large;
                                                  font-family: "Arial Black";
                                         }
+                                        li {
+                                            list-style-type: none;
+                                        }
                                         /*kjøp-knapp*/ .bilKnapp {
                                                             height: 25px;
                                                             width: 50px;
                                                             background-color: #84CEEB;
-    color: ;
                                                             border: 1px solid black;
                                                             border-radius: 20px;
 
@@ -137,7 +141,7 @@ text {
                                                        .bilKnapp:hover {
                                                            background-color: #25274D;
                                                            color: #FEFFFF;
-                                                           pointer-events: visibleFill;
+                                                          cursor: not-allowed;
                                                        }
 
 
@@ -146,26 +150,41 @@ text {
     background-color: cadetblue;
     display: compact;
 }
-        /*INPUT elementene*/ .serviceSkjema {
+/*INPUT elementene*/ .serviceSkjema {
                                     top: 160px;
                                     position: relative;
                                     text-align: center;
                                     font-family: Arial;
                              }
-                             pre {
+                            pre {
                                  font-family: Arial;
                              }
-                                    .regBilKnapp {
-                                            color: #FEFFFF;
-                                            background-color: #376E6F;
-                                            height: 2.8rem;
-                                            border-radius: 20px;
-                                            font-weight: bolder;
-                                    }
-                                    .regBilKnapp:hover {
-                                        color: #376E6F;
-                                        background-color: #FEFFFF;
-                                    }
+                                input {
+                                         padding: 16px 20px;
+                                     }
+/*Når inputfeltet er valgt*/           input:focus {
+                                        border: 7px cornflowerblue;
+                                        background-color: lightskyblue;
+                                     }
+                                               select {
+                                            padding: 16px 20px;
+                                            border: none;
+                                            border-radius: 4px;
+                                            background-color: #f1f1f1;
+                                        }
+                                                      .regBilKnapp {
+                                                        padding: 16px 20px;
+                                                        color: #FEFFFF;
+                                                        background-color: #376E6F;
+                                                        height: 2.8rem;
+                                                        border-radius: 20px;
+                                                        font-weight: bolder;
+                                                }
+                                                         .regBilKnapp:hover {
+                                                    color: #376E6F;
+                                                    background-color: #FEFFFF;
+                                                    cursor: not-allowed;
+                                                }
 
 /*omOss*/
 #omOss {
