--- a/SeeCorrectMake/Nettsiden/src/index.css
+++ b/SeeCorrectMake/Nettsiden/src/index.css
@@ -67,7 +67,8 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
 
     .sideSlide1 {
         background-color: rgb(177, 214, 241);
-    } /*DIV-elementene rundt pilene. Kunne ikke gjøre alle sammen, da de ble liggende oppå hverandre og ikke ved riktig sted*/
+    }
+/*DIV-elementene rundt pilene. Kunne ikke gjøre alle sammen, da de ble liggende oppå hverandre og ikke ved riktig sted*/
         .arrowRight {
             width: 7vw;
             height: 10vh;
@@ -107,13 +108,15 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
             left: 293vw;
             top: 52vh;
             cursor: pointer;
-        }/*Pil-ikonene*/
-            i[class^="fas fa"]{
+        }
+/*Pil-ikonene*/
+            i[class^="slide "]{
                 position: absolute;
                 margin-top: 3.8vh;
                 margin-left: 3vw;
 
             }
+/*Hele nedre info-meny*/
         .nedreMeny {
             margin-left: 20vw;
             width: 80vw;
@@ -123,24 +126,46 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
             position: absolute;
             z-index: 0;
             bottom: 0;
+            text-align: center;
         }
+/*Venstre infomeny*/
             .nedreMenyInfo1 {
                 background-color: rgb(248, 248, 248);
                 width: 40vw;
             }
+/*Overskrift announcements*/
+                .info1Overskrift {
+                    font-weight: bolder;
+                    font-family: "Arial Black";
+                    top: 10px;
+                }
+/*Container som inneholder all informativ tekst*/
+                .infoSlideShow{
+                    position: relative;
+                }
+/*selve slidene med teksen*/
+                .slide1 {
+                    display: block;
+                }
+/*skjuler info-slide nr 2*/
+                .slide2 {
+                    display: none;
+                }
+/*Midtre infomeny*/
             .nedreMenyInfo2 {
                 background-color: rgb(160, 198, 98);
                 width: 18vw;
             }
+/*Høyre infomeny*/
             .nedreMenyInfo3 {
                 background-color: rgb(168, 18, 44);
                 width: 40vw;
             }
-
+/*Midtre hovedside*/
     .sideSlide2 {
         background-color: darkgoldenrod;
     }
-
+/*Høyre hovedside*/
     .sideSlide3 {
         background-color: lime;
     }
