--- a/SeeCorrectMake/Nettsiden/src/index.css
+++ b/SeeCorrectMake/Nettsiden/src/index.css
@@ -3,6 +3,7 @@ html {
 }
 body {
     margin: 0; /*Dekke hele siden*/
+    font-family: "Arial";
 }
 
 .sideBar {
@@ -132,12 +133,11 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
             .nedreMenyInfo1 {
                 background-color: rgb(248, 248, 248);
                 width: 40vw;
+                color: rgb(68, 58, 54);
             }
 /*Overskrift announcements*/
                 .info1Overskrift {
                     font-weight: bolder;
-                    font-family: "Arial Black";
-                    top: 10px;
                 }
 /*Container som inneholder all informativ tekst*/
                 .infoSlideShow{
@@ -151,6 +151,23 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
                 .slide2 {
                     display: none;
                 }
+
+                .slide1 , .slide2 {
+                    margin-top: 4vh;
+                    margin-left: 2vh;
+                }
+/*PIL til høyre*/
+                    i[class^="infoPil1"]{
+                        position: absolute;
+                        margin-top: 6vh;
+                        margin-left: 0;
+                    }
+/*PIL til høyre*/
+                    i[class^="infoPil2"]{
+                        position: absolute;
+                        margin-top: 6vh;
+                        margin-right: 0;
+                    }
 /*Midtre infomeny*/
             .nedreMenyInfo2 {
                 background-color: rgb(160, 198, 98);
