--- a/SeeCorrectMake/Nettsiden/src/index.css
+++ b/SeeCorrectMake/Nettsiden/src/index.css
@@ -1,11 +1,12 @@
 html {
     scroll-behavior: smooth; /*scroller smooth når kanpp trykkes og ikke hopper*/
 }
+/*---------------------------------------------------------------------------------------*/
 body {
     margin: 0; /*Dekke hele siden*/
     font-family: "Arial";
 }
-
+/*---------------------------------------------------------------------------------------*/
 .sideBar {
     background-color: rgb(254,254,254);
     width: 20vw;
@@ -13,7 +14,7 @@ body {
     position: fixed;
     z-index: 1;
 }
-
+/*---------------------------------------------------------------------------------------*/
     .logo {
         display: block;
         margin-left: auto;
@@ -22,6 +23,7 @@ body {
         height: 32vh;
         width: 26vh;
     }
+/*---------------------------------------------------------------------------------------*/
             /*Disse klassen tilordnes i javascript når brukeren scroller*/
             .sideBarCollapse {
                 width: 7vw;
@@ -30,14 +32,16 @@ body {
                 height: 12vh;
                 width: 9vh;
             }
+/*---------------------------------------------------------------------------------------*/
     .slagOrd {
         font-weight: bold;
         font-size: 2vw;
         display: flex;
         justify-content: center;
         font-family: "Arial Black";
+        color: indigo;
     }
-
+/*---------------------------------------------------------------------------------------*/
 /*SIDEBAR-MENY*/
 .infoMeny {
     list-style-type: none;
@@ -46,29 +50,56 @@ body {
 }
     .infoMenyPunkt a {
         text-decoration: none;
-        color: black;
+        color: indigo;
         padding: 15px;
         letter-spacing: 1px;
         font-weight: bold;
         font-size: 3vh;
         justify-content: space-evenly;
     }
-
+/*---------------------------------------------------------------------------------------*/
+/*Hele siden med de tre hovedsidene*/
 .innholdSide {
     width: 300vw;
     height: auto;
     display: flex;
     flex-direction: row;
 }
-
+/*---------------------------------------------------------------------------------------*/
 div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
     width: 100vw;
     height: 100vh;
 }
-
+/*---------------------------------------------------------------------------------------*/
+/*Første hovedside*/
     .sideSlide1 {
-        background-color: rgb(177, 214, 241);
+        background-color: rgb(176, 211, 238);
     }
+/*bakgrunnsbilde*/
+        .img1 {
+            height: 100vh;
+            width: 100vw;
+            opacity: 0.4;
+        }
+/*DIV-elemente med skriften på siden*/
+        .hovedskrift {
+            left: 30vw;
+            position: absolute;
+            top: 10vh;
+            font-family: Arial;
+            color: indigo;
+        }
+/*skriften som skal være større*/
+        .span {
+            font-weight: bolder;
+            font-size: 10vh;
+            letter-spacing: .2vh;
+        }
+/*skriften som varierer ord*/
+        .dynamicOrd {
+            display: inline;
+        }
+/*---------------------------------------------------------------------------------------*/
 /*DIV-elementene rundt pilene. Kunne ikke gjøre alle sammen, da de ble liggende oppå hverandre og ikke ved riktig sted*/
         .arrowRight {
             width: 7vw;
@@ -79,6 +110,7 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
             right: 0;
             top: 42vh;
             cursor: pointer;
+            z-index: 1;
         }
         .arrowRight1 {
             width: 7vw;
@@ -117,6 +149,7 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
                 margin-left: 3vw;
 
             }
+/*---------------------------------------------------------------------------------------*/
 /*Hele nedre info-meny*/
         .nedreMeny {
             margin-left: 20vw;
@@ -129,7 +162,8 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
             bottom: 0;
             text-align: center;
         }
-/*Venstre infomeny*/
+/*---------------------------------------------------------------------------------------*/
+/*Venstre nedre info-meny*/
             .nedreMenyInfo1 {
                 background-color: rgb(248, 248, 248);
                 width: 40vw;
@@ -137,51 +171,87 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
             }
 /*Overskrift announcements*/
                 .info1Overskrift {
-                    font-weight: bolder;
+                   position: relative;
+                    top: 7px;
                 }
 /*Container som inneholder all informativ tekst*/
                 .infoSlideShow{
                     position: relative;
                 }
-/*selve slidene med teksen*/
-                .slide1 {
-                    display: block;
-                }
-/*skjuler info-slide nr 2*/
-                .slide2 {
-                    display: none;
-                }
-
+/*de to info-skrivene nede til venstre*/
                 .slide1 , .slide2 {
                     margin-top: 4vh;
-                    margin-left: 2vh;
+                    float: left;
+                    margin-left: 1vw;
                 }
-/*PIL til høyre*/
-                    i[class^="infoPil1"]{
-                        position: absolute;
-                        margin-top: 6vh;
-                        margin-left: 0;
+/*PIL til høyre og venstre*/
+                    i[class^="infoPil"]{
+                        font-weight: bolder;
+                        cursor: pointer;
+                        float: right;
+                        margin-top: 7vh;
+                        height: 3vh;
+                        width: 3vw;
+                        padding: 5px;
+                        background-color: rgb(54, 54, 60);
+                        color: white;
+
                     }
-/*PIL til høyre*/
-                    i[class^="infoPil2"]{
-                        position: absolute;
-                        margin-top: 6vh;
-                        margin-right: 0;
-                    }
+/*Begge pilene kommer "ut" når man har pil over hver enkelt*/
+                i[class^="infoPil"]:hover {
+                    transform: scale(1.1);
+                    transition: transform 0.1s;
+                }
+/*---------------------------------------------------------------------------------------*/
 /*Midtre infomeny*/
             .nedreMenyInfo2 {
                 background-color: rgb(160, 198, 98);
                 width: 18vw;
             }
+
+/*---------------------------------------------------------------------------------------*/
 /*Høyre infomeny*/
             .nedreMenyInfo3 {
                 background-color: rgb(168, 18, 44);
                 width: 40vw;
             }
+/*Overskrift infomeny nede til høyre*/
+                .info3Overskrift {
+                    position: relative;
+                    top: 7px;
+                    color: white;
+                    font-weight: bolder;
+                }
+/*de to tekst-divene nede til høyre*/
+                    .slide3, .slide4 {
+                        float: left;
+                        margin-top: 4vh;
+                        margin-left: 1vw;
+                        color: white;
+                    }
+/*PIL til høyre og venstre*/
+                    i[class^="pilInfo"]{
+                        font-weight: bolder;
+                        cursor: pointer;
+                        float: right;
+                        margin-top: 7vh;
+                        height: 3vh;
+                        width: 3vw;
+                        padding: 5px;
+                        color: white;
+
+                    }
+/*Begge pilene kommer "ut" når man har pil over hver enkelt*/
+                    i[class^="pilInfo"]:hover {
+                        transform: scale(1.1);
+                        transition: transform 0.1s;
+                    }
+/*---------------------------------------------------------------------------------------*/
 /*Midtre hovedside*/
     .sideSlide2 {
         background-color: darkgoldenrod;
     }
+/*---------------------------------------------------------------------------------------*/
 /*Høyre hovedside*/
     .sideSlide3 {
         background-color: lime;
