Oppdatert .css slik at hele menyen følger (ikke bare teksten, underfargen også)

--- a/FreakyFriday/src/FreakyFriday.css
+++ b/FreakyFriday/src/FreakyFriday.css
@@ -21,6 +21,8 @@ body {
         background-color: #2F4454;
         height: 12vh;
         width: 100%;
+        position: fixed;
+        z-index: 1;
     }
     .content {
         grid-area: content;
