--- a/SeeCorrectMake/Nettsiden/src/index.css
+++ b/SeeCorrectMake/Nettsiden/src/index.css
@@ -52,17 +52,22 @@ body {
     .infoMenyPunkt a {
         text-decoration: none;
         color: indigo;
-        padding: 15px;
-        letter-spacing: 1px;
+        line-height: 7vh;
+        letter-spacing: 1.2px;
         font-weight: bolder;
-        font-size: 1.4vw;
+        font-size: 3vh;
         justify-content: space-evenly;
     }
 /*forstørrer skriften menyen når musa er over*/
         .infoMenyPunkt a:hover {
             transform: scale(1.3);
-            transition: transform 0.1s;
+            transition: transform 0.01s;
         }
+            /*de første mer informative punktene*/
+                .ulMeny3punk1 {
+                    font-size: 2.4vh;
+                    padding-bottom: 3vh;
+                }
 /*---------------------------------------------------------------------------------------*/
 /*Hele siden med de tre hovedsidene*/
 .innholdSide {
@@ -235,6 +240,7 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
                         position: absolute;
                         margin-top: 3.8vh;
                         margin-left: 3vw;
+                        font-size: 4vh;
                         color: indigo;
                     }
 /*---------------------------------------------------------------------------------------*/
